oscilloscope/crates/oscilloscope-core/tests/snapshots/golden__sigterm.snap
---
source: crates/oscilloscope-core/tests/golden.rs
expression: rendered
---
--- observation 0 ---
log:
status:
--- observation 1 ---
log:
  ▶ prime.slow  shell tail -f /dev/null
  ■ run failed: Interrupted (SIGTERM)  0.2s
status:
prime: Failed skip=None retrying=false
prime.slow: Cancelled skip=None retrying=false
--- exit ---
exit_code: 143
